Bug 793888 - Separators in the message header pane toolbar are not visible. r+ui-r=bwinton

--- a/mail/themes/gnomestripe/mail/messageHeader.css
+++ b/mail/themes/gnomestripe/mail/messageHeader.css
@@ -72,6 +72,14 @@
   padding: 0;
 }
 
+.inline-toolbar toolbarseparator {
+  height: 28px;
+}
+
+.inline-toolbar toolbarspacer {
+  height: 23px;
+}
+
 #expandedsubjectBox > .headerValue {
   font-weight: bold;
 }
